fix(panel): improve panel button contrast in lockscreen
Adds a text/icon shadow to panel buttons in the lock screen to ensure that they
remain visible and legible.

--- a/gnome-shell/src/gnome-shell-sass/widgets/_panel.scss
+++ b/gnome-shell/src/gnome-shell-sass/widgets/_panel.scss
@@ -6,6 +6,7 @@ $panel_fg_color: #ccc;
 $panel_height: 1.86em;
 $panel_button_margin: 3px;
 $panel_icon_padding: 3px;
+$lock_panel_shadow: 0px 0px 10px 1px black;
 
 
 #panel {
@@ -26,14 +27,24 @@ $panel_icon_padding: 3px;
     }
 
     .panel-button {
+      text-shadow: $lock_panel_shadow;
+      
       color: $panel_fg_color;
       border-color: transparent;
       border-width: 0;
+
+      StIcon{
+        icon-shadow: $lock_panel_shadow;
+      }
 
       &:focus, &:hover, &:active { 
         color: white; 
         border-color: transparent;
         border-width: 0;
+      }
+
+      &:active {
+        background-color: rgba($panel_fg_color, 0.2);
       }
     }
   }
